[package]
name = "mpvtester"
version = "0.1.0"
authors = ["Rex <elsecaller@8176135.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
ureq = { version = "*", features = ["cookies", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
libmpv-sys = { path = "libmpv-rs/libmpv-sys" }
winit = "*"
pixels = "*"
nanorand = "*"
walkdir = "*"
argh = "*"

[target.x86_64-pc-windows-msvc.dependencies]
libmpv = { path = "libmpv-rs", features = ["build_libmpv"] }
winapi = "*"

[target.x86_64-unknown-linux-gnu.dependencies]
libmpv = { path = "libmpv-rs" }
