[package]
name = "mpvtester"
version = "0.1.0"
authors = ["Rex <elsecaller@8176135.xyz>"]
edition = "2018"


[dependencies]
ureq = { version = "*", features = ["cookies", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
libmpv-sys = { path = "libmpv-rs/libmpv-sys" }
winit = "*"
pixels = "*"
nanorand = "*"
walkdir = "*"
argh = "*"
glium = { version = "0.30", features = ["glutin"] }

[target.x86_64-pc-windows-msvc.dependencies]
libmpv = { path = "libmpv-rs", features = ["build_libmpv"] }
winapi = "*"

[target.x86_64-unknown-linux-gnu.dependencies]
libmpv = { path = "libmpv-rs" }
