[package]
name = "mpvtester"
version = "0.1.0"
authors = ["Rex <elsecaller@8176135.xyz>"]
edition = "2018"
build = "build.rs"

[dependencies]
# ureq = { version = "*", features = ["cookies", "json"] }
# serde = { version = "*", features = ["derive"] }
# serde_json = "*"
# libmpv-sys = { path = "libmpv-rs/libmpv-sys" }
# winit = "*"
# pixels = "*"
miniquad = "0.3.0-alpha.37"
nanorand = "*"
walkdir = "*"
# argh = "*"
# glium = { version = "0.30", features = ["glutin"] }
# fltk = {version = "1.2", features=["enable-glwindow", "no-pango", "fltk-bundled"]}

[target.x86_64-pc-windows-msvc.dependencies]
libmpv = { git = "https://github.com/8176135/libmpv-rs", branch = "software-rendering", features = ["build_libmpv"] }
windows = "0.21.1"

[target.x86_64-unknown-linux-gnu.dependencies]
libmpv = { git = "https://github.com/8176135/libmpv-rs",branch = "software-rendering" }

[target.x86_64-pc-windows-msvc.build-dependencies]
windows = "0.21.1"

[features]
# default = ["parent-hwnd"]
parent-hwnd = []